--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -20,6 +20,7 @@
     "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.1",
+    "fuse.js": "^7.0.0",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-date-ranges": "^2.5.0",
