--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
-    "expo": "^51.0.8",
+    "expo": "~51.0.11",
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.1",
     "fuse.js": "^7.0.0",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
+    "react-native": "^0.74.2",
     "react-native-date-ranges": "^2.5.0",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-box": "^2.0.7",
@@ -38,6 +39,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-uuid": "^2.0.2",
     "react-redux": "^9.1.2",
+    "rn-fetch-blob": "^0.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
